--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gemwallet/api": "^3.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
