--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@gemwallet/api": "^3.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
