--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@crossmarkio/sdk": "^0.4.0",
     "@gemwallet/api": "^3.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
