--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "xumm": "^1.7.7",
-    "xumm-oauth2-pkce": "^2.8.5",
+    "xumm-oauth2-pkce": "^2.8.7",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -36,5 +36,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
